--- a/home.html
+++ b/home.html
@@ -32,11 +32,13 @@
                 <h1><i class="fas fa-sign-in-alt"></i> Estudiante</h1>
                 <div class="input-container">
                     <i class="fas fa-user"></i>
-                    <input type="email" placeholder="Correo electrónico" id="estudiante-username" required>
+                    <input type="email" placeholder="Correo electrónico" id="estudiante-username">
+                    <div id="error-usernameE" class="error-messageE"></div>
                 </div>
                 <div class="input-container">
                     <i class="fas fa-lock"></i>
-                    <input type="password" placeholder="Contraseña" id="estudiante-password" required>
+                    <input type="password" placeholder="Contraseña" id="estudiante-password">
+                    <div id="error-passwordE" class="error-messageE"></div>
                     <div>
                         <a href="#">Olvidé mi contraseña</a>
                       </div>
@@ -58,12 +60,14 @@
                 <h1><i class="fas fa-sign-in-alt"></i> Docente</h1>
                 <div class="input-container">
                     <i class="fas fa-user"></i>
-                    <input type="email" placeholder="Correo electrónico" id="docente-username" required>
+                    <input type="email" placeholder="Correo electrónico" id="docente-username">
+                    <div id="error-username" class="error-message"></div>
                 </div>
                 <div class="input-container">
                     <i class="fas fa-lock"></i>
-                    <input type="password" placeholder="Contraseña" id="docente-password" required>
-                <div>
+                    <input type="password" placeholder="Contraseña" id="docente-password">
+                    <div id="error-password" class="error-message"></div>
+                 <div>
                     <a href="#">Olvidé mi contraseña</a>
                   </div>
                   <div>
